# database-final

./: .env.example  .gitignore  API_CONTRACT.md  README.md  docker-compose.yml  package-lock.json
archive/: README.md
auth/: Dockerfile  README.md  pyproject.toml
auth/src/: database.py  dependencies.py  main.py  models.py  tables.py
auth/src/routers/: auth.py  validate.py
backend/: .dockerignore  pyproject.toml
backend/src/: main.py
backend/src/api/: router.py
backend/src/api/routes/: admin.py  checker.py  public.py  shared.py  student.py
backend/src/core/: config.py  database.py  exceptions.py
backend/src/models/: __init__.py  models.py
backend/src/services/: checker.py  importer.py
data/double_major_requirements/112/: 101_中國文學系.json  102_g4_教育學系-師資組.json  102_g5_教育學系-非師資組.json  103_歷史學系.json  104_哲學系.json  202_政治學系.json  203_外交學系.json  204_社會學系.json  205_g1_財政學系-稅務組.json  205_g2_財政學系-公共經濟組.json  205_g3_財政學系-財政管理組.json  206_公共行政學系.json  207_g3_地政學系-土地管理組.json  207_g4_地政學系-土地資源規劃組.json  208_經濟學系.json  (+31 more)
db/: 00-init.sql  01-seed-departments.sql  02-seed-courses.sql  02-token.sql  init.sql
docs/: API_SPEC.md  overview.md
docs/bruno-api/: Delete User.yml  Login.yml  Logout.yml  Register (admin).yml  Register (student).yml  Status.yml  check upload.yml  check.yml  opencollection.yml
frontend/: .dockerignore  .env.development  ADMIN_GUIDE.md  Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts
k6/: smoke_test.js
nginx/: nginx.conf
pgadmin/: servers.json
scripts/: gen_seed_sql.py
(+117 files in other folders)
