[project]
name = "auth"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "argon2-cffi>=23.1.0",
    "fastapi>=0.128.0",
    "passlib>=1.7.4",
    "python-dotenv>=1.2.1",
    "redis>=5.0.0",
    "uvicorn>=0.40.0",
]
