[project]
name = "backend"
version = "0.1.0"
description = "NCCU 畢業學分檢核系統 backend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.9",
]
